2004-05-20  Bradley Bell  <btb@icculus.org>

	* VisualC/d2xgl/d2xgl.dsp: don't need texmappers for OpenGL

2004-05-20  David Cleaver  <wraithx@morpheus.net>

	* main/controls.c, main/gamecntl.c, main/kconfig.c,
	main/kconfig.h, main/object.c: death-cam from WraithX (d1x r1.3,
	game.c r1.21, r1.6, r1.4, r1.3)

2004-05-20  Bradley Bell  <btb@icculus.org>

	* main/inferno.c: document -ihaveabrokenmouse

2004-05-20  Matthew Mueller  <donut@dakotacom.net>

	* arch/dos/vesa.c: dos gcc 2.95 asm fixes (d1x r1.2)

2004-05-20  Victor Rachels  <sekmu@tisiphone.dhs.org>

	* arch/dos/init.c, arch/dos/mouse.c: added new arg and printfs for
	mouse driver problems (d1x r1.2, r1.2)

2004-05-20  Matthew Mueller  <donut@dakotacom.net>

	* main/newmenu.c: increased MESSAGEBOX_TEXT_SIZE to fix netgame
	join list score crash (d1x r1.8)

2004-05-20  Victor Rachels  <sekmu@tisiphone.dhs.org>

	* main/fvi.c, main/gameseg.c, main/gameseg.h, main/physics.c:
	added debug info for illegal side type (d1x r1.2, r1.4, r1.2,
	r1.2)

2004-05-20  Bradley Bell  <btb@icculus.org>

	* arch/ogl/gr.c, main/menu.c: fix a couple of defines

	* main/inferno.c: integrated some niceautomap stuff from d1x

2004-05-20  Matthew Mueller  <donut@dakotacom.net>

	* arch/win32/joyhh.c: fixed the config bug where it'd always put
	in some weird axis (d1x r1.3)

	* arch/win32/init.c: set win32 icon to icon from resource file
	(d1x r1.4)

	* arch/win32/key.c: win32: fixed space key not working in messages
	(d1x r1.2)

2004-05-20  Bradley Bell  <btb@icculus.org>

	* texmap/Makefile.am, texmap/scanline.c: don't need texmappers for
	OpenGL

2004-05-20  Matthew Mueller  <donut@dakotacom.net>

	* main/inferno.c: document -gl_refresh (d1x r1.20)

	* arch/win32/joyhh.c, arch/win32/mouse.c: w32: check
	-no(mouse|joystick) within respective _init() funcs (d1x r1.2,
	r1.6)

	* arch/win32/win32.c: fixed win32 gr_*_mode funcs that I forgot to
	change the arg type for (d1x r1.5)

2004-05-20  Victor Rachels  <sekmu@tisiphone.dhs.org>