@@ -1,4 +1,4 @@
-/* $Id: inferno.c,v 1.80 2004-05-21 01:54:39 btb Exp $ */
+/* $Id: inferno.c,v 1.81 2004-05-22 00:26:25 btb Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -1001,9 +1001,6 @@ void print_commandline_help()
 //	printf( "  -tsengdebug1    %s\n","FIXME: Undocumented");
 //	printf( "  -tsengdebug2    %s\n","FIXME: Undocumented");
 //	printf( "  -tsengdebug3    %s\n","FIXME: Undocumented");
-#ifdef NETWORK
-	printf( "  -udp            %s\n","Use TCP/UDP for networking");
-#endif
 //	printf( "  -vidram         %s\n","FIXME: Undocumented");
 	printf( "  -xcontrol       %s\n","FIXME: Undocumented");
 	printf( "  -xname          %s\n","FIXME: Undocumented");
@@ -1061,6 +1058,16 @@ void print_commandline_help()
 #ifdef SDL_VIDEO
 	printf( "  -nosdlvidmodecheck %s\n", "Some X servers don't like checking vidmode first, so just switch");
 	printf( "  -hwsurface      %s\n","FIXME: Undocumented");
+#endif
+#ifdef NETWORK
+	printf("  -udp            %s\n", "Use udp/ip on local network");
+	printf("    @<shift>      %s\n", "  shift udp port base offset");
+	printf("    =<HOST_LIST>  %s\n", "  broadcast both local and to HOST_LIST");
+	printf("    +<HOST_LIST>  %s\n", "  broadcast only to HOST_LIST");
+	printf("                  %s\n", "   HOSTS can be any IP or hostname")
+		;
+	printf("                  %s\n", "   HOSTS can also be in the form of <address>:<shift>");
+	printf("                  %s\n", "   separate multiple HOSTS with a ,");
 #endif
 #ifdef __unix__
 	printf( "  -serialdevice <s> %s\n", "Set serial/modem device to <s>");
