@@ -1,3 +1,7 @@
+2004-05-21  Bradley Bell  <btb@icculus.org>
+
+	* main/inferno.c: added -udp documentation from d1x
+
 2004-05-20  Bradley Bell  <btb@icculus.org>
 
 	* VisualC/d2xgl/d2xgl.dsp: don't need texmappers for OpenGL
